--- a/server/patstrap.cfg
+++ b/server/patstrap.cfg
@@ -1,5 +1,35 @@
 {
     "numMotors": 2,
+    "avatarPoint1": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
+    "avatarPoint2": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
+    "avatarPoint3": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
+    "avatarPoint4": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
+    "motor1": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
+    "motor2": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+    },
     "vrcOscPort": 9001,
     "mqttServerIp": "10.2.1.11"
 }
