update readme and various tweaks

--- a/server/patpatpat.cfg
+++ b/server/patpatpat.cfg
@@ -27,8 +27,8 @@
     "motor0": {
         "x": 0,
         "y": 0.18,
-        "z": 0.2,
-        "r": 0.2
+        "z": 0.1,
+        "r": 0.1
     },
     "motor1": {
         "x": 0,
@@ -36,6 +36,6 @@
         "z": -0.1,
         "r": 0.1
     },
-    "vrcOscPort": 9001,
-    "mqttServerIp": "10.2.1.11"
+    "vrcOscTxPort": 9001,
+    "mqttBrokerIp": "10.2.1.11"
 }
