--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,6 +10,7 @@
 
 [platformio]
 extra_configs = wifi.ini
+default_envs = lolin_d1_mini
 
 [env]
 monitor_speed = 115200
@@ -22,9 +23,14 @@ build_flags =
 	-O2
 build_unflags = -Os
 
-[env:esp12e]
+[env:lolin_d1_mini]
 platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 921600
+lib_deps = OSC=https://github.com/CNMAT/OSC.git
+
+[env:lolin_s2_mini]
+platform = platformio/espressif32
+board = lolin_s2_mini
 lib_deps = OSC=https://github.com/CNMAT/OSC.git
