improve led handling and pio config

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -22,15 +22,21 @@ build_flags =
 	-DWIFI_CREDS_PASSWD='${wifi.password}'
 	-O2
 build_unflags = -Os
+lib_deps =
+	OSC=https://github.com/CNMAT/OSC.git
 
 [env:lolin_d1_mini]
 platform = espressif8266
 board = esp12e
-framework = arduino
 upload_speed = 921600
-lib_deps = OSC=https://github.com/CNMAT/OSC.git
+build_flags = 
+	${env.build_flags}
+	-D TARGET_D1_MINI
+
 
 [env:lolin_s2_mini]
 platform = platformio/espressif32
 board = lolin_s2_mini
-lib_deps = OSC=https://github.com/CNMAT/OSC.git
+build_flags = 
+	${env.build_flags}
+	-D TARGET_S2_MINI
