use mac as part of hostname, send version with mdns

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,7 +15,9 @@ default_envs = lolin_d1_mini
 [env]
 monitor_speed = 115200
 monitor_echo = yes
-monitor_filters = colorize
+monitor_filters = 
+	colorize
+	time
 framework = arduino
 build_flags = 
 	-DWIFI_CREDS_SSID='${wifi.ssid}'
