change default pio env

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 extra_configs = wifi.ini
-default_envs = lolin_d1_mini
+default_envs = lolin_s2_mini
 
 [env]
 monitor_speed = 115200
