Add more motors to config for testing

--- a/server/patpatpat.cfg
+++ b/server/patpatpat.cfg
@@ -1,5 +1,5 @@
 {
-    "numMotors": 2,
+    "numMotors": 7,
     "avatarPoint0": {
         "x": 0,
         "y": 0.1196,
@@ -34,6 +34,36 @@
         "x": 0,
         "y": 0.21,
         "z": -0.1,
+        "r": 0.1
+    },
+    "motor2": {
+        "x": 0,
+        "y": 0.21,
+        "z": -0.08,
+        "r": 0.1
+    },
+    "motor3": {
+        "x": 0,
+        "y": 0.21,
+        "z": -0.06,
+        "r": 0.1
+    },
+    "motor4": {
+        "x": 0,
+        "y": 0.21,
+        "z": -0.04,
+        "r": 0.1
+    },
+    "motor5": {
+        "x": 0,
+        "y": 0.21,
+        "z": -0.02,
+        "r": 0.1
+    },
+    "motor6": {
+        "x": 0,
+        "y": 0.21,
+        "z": 0,
         "r": 0.1
     },
     "vrcOscTxPort": 9001,
