--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
     paths:
       - '**.py'
 
+defaults:
+  run:
+    working-directory: ./server
+
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -16,8 +20,8 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.9'
-          spec: 'server/vrc-patpatpat.spec'
-          requirements: 'server/requirements.txt'
+          spec: 'vrc-patpatpat.spec'
+          requirements: 'requirements.txt'
           upload_exe_with_name: 'vrc-patpatpat'
   build-windows-debug:
     runs-on: windows-latest
@@ -26,6 +30,6 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.9'
-          spec: 'server/vrc-patpatpat-debug.spec'
-          requirements: 'server/requirements.txt'
+          spec: 'vrc-patpatpat-debug.spec'
+          requirements: 'requirements.txt'
           upload_exe_with_name: 'vrc-patpatpat-debug'
