--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,8 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.9'
-          spec: 'vrc-patpatpat.spec'
-          requirements: 'requirements.txt'
+          spec: 'server/vrc-patpatpat.spec'
+          requirements: 'server/requirements.txt'
           upload_exe_with_name: 'vrc-patpatpat'
   build-windows-debug:
     runs-on: windows-latest
@@ -30,6 +30,6 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.9'
-          spec: 'vrc-patpatpat-debug.spec'
-          requirements: 'requirements.txt'
+          spec: 'server/vrc-patpatpat-debug.spec'
+          requirements: 'server/requirements.txt'
           upload_exe_with_name: 'vrc-patpatpat-debug'
