--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,13 @@ name: build
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - '**'
-    paths:
-      - '**.py'
+  #push:
+  #  branches:
+  #    - '**'
+  #  paths:
+  #    - '**.py'
 
+# this does nothing as expected
 defaults:
   run:
     working-directory: ./server
