update prototype config and gitignore

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -11,6 +11,7 @@
     },
     "groups": {
         "1": {
+            "name": "Head"
             "motors": [
                 {
                     "name": "Motor 1",
@@ -29,7 +30,8 @@
             ],
             "solver": {
                 "solverType": "mlatsolver",
-                "enableHalfSphereCheck": true
+                "enableHalfSphereCheck": true,
+                "contactOnly": false
             }
         }
     }
