--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -1,6 +1,7 @@
 {
     "vrcOscPort": 9001,
     "mqttBrokerIp": "10.2.1.11",
+    "processingFramerate": 40,
     "esps": {
         "1": {
             "name": "Head",
@@ -24,6 +25,7 @@
             "avatarPoints": [
                 {
                     "name": "Point 1",
+                    "receiverId": "rec_1",
                     "xyz": [1.0, 2.0, 3.0],
                     "r": 0.5
                 }
