update config prototype

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -1,9 +1,9 @@
 {
     "vrcOscPort": 9001,
     "mqttBrokerIp": "10.2.1.11",
-    "processingFramerate": 40,
+    "mainTps": 40,
     "esps": {
-        "1": {
+        "0": {
             "name": "Head",
             "lastIp": "56.234.204.178",
             "wifiMac": "FF:FF:FF:AA:AA:AA",
@@ -12,7 +12,7 @@
     },
     "groups": {
         "1": {
-            "name": "Head"
+            "name": "Head",
             "motors": [
                 {
                     "name": "Motor 1",
