--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -2,6 +2,7 @@
     "vrcOscPort": 9001,
     "mqttBrokerIp": "10.2.1.11",
     "mainTps": 40,
+    "logLevel": "DEBUG",
     "esps": {
         "0": {
             "name": "Head",
@@ -18,6 +19,7 @@
                     "name": "Motor 1",
                     "espAddr": [1,1],
                     "minPwm": 75,
+                    "maxPwm": 255,
                     "xyz": [1.0, 2.0, 3.0],
                     "r": 0.5
                 }
