Reformat config prototype

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -1,8 +1,15 @@
 {
-    "vrcOscPort": 9001,
-    "mqttBrokerIp": "10.2.1.11",
-    "mainTps": 40,
-    "logLevel": "DEBUG",
+    "program": {
+        "vrcOscPort": 9001,
+        "mqttBrokerIp": "10.2.1.11",
+        "mainTps": 40,
+        "logLevel": "DEBUG",
+        "testarray": [
+            40,
+            40,
+            33
+        ]
+    },
     "esps": {
         "0": {
             "name": "Head",
@@ -17,10 +24,17 @@
             "motors": [
                 {
                     "name": "Motor 1",
-                    "espAddr": [1,1],
+                    "espAddr": [
+                        1,
+                        1
+                    ],
                     "minPwm": 75,
                     "maxPwm": 255,
-                    "xyz": [1.0, 2.0, 3.0],
+                    "xyz": [
+                        1.0,
+                        2.0,
+                        3.0
+                    ],
                     "r": 0.5
                 }
             ],
@@ -28,7 +42,11 @@
                 {
                     "name": "Point 1",
                     "receiverId": "rec_1",
-                    "xyz": [1.0, 2.0, 3.0],
+                    "xyz": [
+                        1.0,
+                        2.0,
+                        3.0
+                    ],
                     "r": 0.5
                 }
             ],
