Add config handling to TabGeneral

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -11,7 +11,7 @@
         ]
     },
     "esps": {
-        "0": {
+        "esp0": {
             "name": "Head",
             "lastIp": "56.234.204.178",
             "wifiMac": "FF:FF:FF:AA:AA:AA",
@@ -19,7 +19,7 @@
         }
     },
     "groups": {
-        "1": {
+        "group0": {
             "name": "Head",
             "motors": [
                 {
