add functionality to solver settings tab

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -52,7 +52,7 @@
                 }
             ],
             "solver": {
-                "solverType": "mlatsolver",
+                "solverType": "Mlat",
                 "enableHalfSphereCheck": true,
                 "contactOnly": false
             }
