Add ColliderPointSettingsTableModel (mostly done)

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -49,6 +49,16 @@
                         3.0
                     ],
                     "r": 0.5
+                },
+                {
+                    "name": "Point 2",
+                    "receiverId": "rec_2",
+                    "xyz": [
+                        6.0,
+                        44.0,
+                        8.0
+                    ],
+                    "r": 0.5
                 }
             ],
             "solver": {
