add config version check to main

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -1,14 +1,10 @@
 {
+    "configVersion": 1,
     "program": {
         "vrcOscPort": 9000,
         "mqttBrokerIp": "10.2.1.11",
         "mainTps": 41,
-        "logLevel": "DEBUG",
-        "testarray": [
-            41,
-            41,
-            33
-        ]
+        "logLevel": "DEBUG"
     },
     "esps": {
         "esp0": {
@@ -26,15 +22,30 @@
                 {
                     "name": "Motor 1",
                     "espAddr": [
-                        1,
+                        0,
                         1
                     ],
-                    "minPwm": 75,
+                    "minPwm": 70,
                     "maxPwm": 255,
                     "xyz": [
-                        1.0,
-                        2.0,
-                        3.0
+                        1.0001,
+                        2.0001,
+                        3.02
+                    ],
+                    "r": 0.5
+                },
+                {
+                    "name": "Motor 2",
+                    "espAddr": [
+                        0,
+                        2
+                    ],
+                    "minPwm": 70,
+                    "maxPwm": 255,
+                    "xyz": [
+                        1.0001,
+                        2.0001,
+                        3.02
                     ],
                     "r": 0.5
                 }
@@ -45,8 +56,8 @@
                     "receiverId": "rec_1",
                     "xyz": [
                         1.0,
-                        2.0,
-                        3.0
+                        2.0001,
+                        3.002
                     ],
                     "r": 0.5
                 },
@@ -54,11 +65,11 @@
                     "name": "Point 2",
                     "receiverId": "rec_2",
                     "xyz": [
-                        6.0,
-                        44.0,
-                        8.0
+                        5.2201,
+                        18.0001,
+                        8.0001
                     ],
-                    "r": 0.5
+                    "r": 0.5001
                 }
             ],
             "solver": {
