add vrc tx port and ip setting

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -1,9 +1,11 @@
 {
     "configVersion": 1,
     "program": {
-        "vrcOscPort": 9000,
+        "vrcOscSendPort": 9001,
+        "vrcOscReceivePort": 9000,
+        "vrcOscReceiveAddress": "127.0.0.1",
         "mqttBrokerIp": "10.2.1.11",
-        "mainTps": 41,
+        "mainTps": 40,
         "logLevel": "DEBUG"
     },
     "esps": {
