add connectionType and serialPort settings for Hardware

--- a/server/prototype-config.conf
+++ b/server/prototype-config.conf
@@ -12,8 +12,10 @@
         "esp0": {
             "id": 0,
             "name": "Head",
+            "connectionType": "osc",
             "lastIp": "56.234.204.178",
             "wifiMac": "FF:FF:FF:AA:AA:AA",
+            "serialPort": "COM1",
             "numMotors": 7
         }
     },
