--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -26,6 +26,10 @@ build_flags =
 build_unflags = -Os
 lib_deps =
 	OSC=https://github.com/CNMAT/OSC.git
+;upload_protocol = espota
+;upload_port = 10.1.1.1
+;upload_flags =
+;    --auth=taptaptap
 
 [env:lolin_d1_mini]
 platform = espressif8266
