--- a/server/config.conf
+++ b/server/config.conf
@@ -11,16 +11,35 @@
     "esps": {
         "esp0": {
             "id": 0,
-            "name": "Head",
-            "connectionType": "osc",
+            "name": "Head 2 test",
+            "connectionType": "OSC",
             "lastIp": "56.234.204.178",
             "wifiMac": "FF:FF:FF:AA:AA:AA",
-            "serialPort": "COM1",
+            "serialPort": "",
+            "numMotors": 4
+        },
+        "esp1": {
+            "id": 1,
+            "name": "ppp-c71af2 test",
+            "connectionType": "OSC",
+            "lastIp": "10.10.1.213",
+            "wifiMac": "84:FC:E6:C7:1A:F2",
+            "serialPort": "",
             "numMotors": 7
+        },
+        "esp2": {
+            "id": 2,
+            "name": "ppp-d66459",
+            "connectionType": "OSC",
+            "lastIp": "10.10.1.180",
+            "wifiMac": "18:FE:34:D6:64:59",
+            "serialPort": "",
+            "numMotors": 2
         }
     },
     "groups": {
         "group0": {
+            "id": 0,
             "name": "Head",
             "motors": [
                 {
