Add ContactGroup implementation

--- a/server/config.conf
+++ b/server/config.conf
@@ -4,7 +4,6 @@
         "vrcOscSendPort": 9001,
         "vrcOscReceivePort": 9000,
         "vrcOscReceiveAddress": "127.0.0.1",
-        "mqttBrokerIp": "10.2.1.11",
         "mainTps": 40,
         "logLevel": "DEBUG"
     },
@@ -40,7 +39,7 @@
     "groups": {
         "group0": {
             "id": 0,
-            "name": "Head",
+            "name": "Head 11",
             "motors": [
                 {
                     "name": "Motor 1",
@@ -76,7 +75,7 @@
             "avatarPoints": [
                 {
                     "name": "Point 1",
-                    "receiverId": "rec_1",
+                    "receiverId": "pat_1",
                     "xyz": [
                         1.0,
                         2.0001,
@@ -86,9 +85,9 @@
                 },
                 {
                     "name": "Point 2",
-                    "receiverId": "rec_2",
+                    "receiverId": "pat_2",
                     "xyz": [
-                        5.2201,
+                        5.0201,
                         18.0001,
                         8.0001
                     ],
@@ -96,9 +95,10 @@
                 }
             ],
             "solver": {
-                "solverType": "Mlat",
+                "solverType": "MLat",
+                "strength": 100,
                 "enableHalfSphereCheck": true,
-                "contactOnly": false
+                "contactOnly": true
             }
         }
     }
