Mostly finish the VisualizerWindow and more work on solver

--- a/server/config.conf
+++ b/server/config.conf
@@ -39,7 +39,7 @@
     "groups": {
         "group0": {
             "id": 0,
-            "name": "Head 11",
+            "name": "Head 1",
             "motors": [
                 {
                     "name": "Motor 1",
@@ -74,30 +74,50 @@
             ],
             "avatarPoints": [
                 {
-                    "name": "Point 1",
-                    "receiverId": "pat_1",
+                    "name": "Center",
+                    "receiverId": "pat_center",
                     "xyz": [
-                        1.0,
-                        2.0001,
-                        3.002
+                        0.0,
+                        0.1196,
+                        0.0065
                     ],
-                    "r": 0.5
+                    "r": 0.14
                 },
                 {
-                    "name": "Point 2",
+                    "name": "Back Left",
+                    "receiverId": "pat_1",
+                    "xyz": [
+                        -0.0855,
+                        0.2264,
+                        -0.0578
+                    ],
+                    "r": 0.26
+                },
+                {
+                    "name": "Back Right",
                     "receiverId": "pat_2",
                     "xyz": [
-                        5.0201,
-                        18.0001,
-                        8.0001
+                        0.0885,
+                        0.2264,
+                        -0.0578
                     ],
-                    "r": 0.5001
+                    "r": 0.26
+                },
+                {
+                    "name": "Front Center",
+                    "receiverId": "pat_3",
+                    "xyz": [
+                        0.2264,
+                        0.1398,
+                        0.1398
+                    ],
+                    "r": 0.26
                 }
             ],
             "solver": {
                 "solverType": "MLat",
                 "strength": 100,
-                "enableHalfSphereCheck": true,
+                "MLat_enableHalfSphereCheck": false,
                 "contactOnly": true
             }
         }
