Add settings toggle to enable/disable osc discovery

--- a/server/config.conf
+++ b/server/config.conf
@@ -4,6 +4,7 @@
         "vrcOscSendPort": 9001,
         "vrcOscReceivePort": 9000,
         "vrcOscReceiveAddress": "127.0.0.1",
+        "enableOscDiscovery": true,
         "mainTps": 50,
         "logLevel": "DEBUG"
     },
