add handling for contactOnly setting to MLat solver

--- a/server/config.conf
+++ b/server/config.conf
@@ -119,7 +119,7 @@
                 "solverType": "MLat",
                 "strength": 100,
                 "MLat_enableHalfSphereCheck": false,
-                "contactOnly": true
+                "contactOnly": false
             }
         }
     }
