dynamically change out solver settings based on solver type

--- a/server/config.conf
+++ b/server/config.conf
@@ -116,10 +116,11 @@
                 }
             ],
             "solver": {
-                "solverType": "MLat",
+                "solverType": "Single n:n",
                 "strength": 100,
-                "MLat_enableHalfSphereCheck": false,
-                "contactOnly": false
+                "contactOnly": true,
+                "MLAT_enableHalfSphereCheck": false,
+                "SINGLEN2N_minMaxMode": "Max"
             }
         }
     }
