rename mode config option

--- a/server/config.conf
+++ b/server/config.conf
@@ -116,11 +116,11 @@
                 }
             ],
             "solver": {
-                "solverType": "Single n:n",
+                "solverType": "MLat",
                 "strength": 100,
-                "contactOnly": true,
+                "contactOnly": false,
                 "MLAT_enableHalfSphereCheck": false,
-                "SINGLEN2N_minMaxMode": "Max"
+                "SINGLEN2N_mode": "Mean"
             }
         }
     }
